# oxid

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  mise.toml
.beads/: issues.jsonl
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.specledger/memory/: constitution.md  rust-code-quality-checklist.md
specledger/: specledger.yaml
specledger/001-tf-json-parsing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specledger/001-tf-json-parsing/checklists/: requirements.md
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs  parser.rs  types.rs  validator.rs  yaml_converter.rs
src/dag/: builder.rs  mod.rs  resolver.rs  resource_graph.rs  validation.rs  visualizer.rs  walker.rs
src/executor/: engine.rs  mod.rs  output_parser.rs  parallel.rs  retry.rs  terraform.rs
src/hcl/: json_parser.rs  mod.rs  parser.rs
src/output/: formatter.rs  report.rs
src/planner/: diff.rs  mod.rs  plan.rs
src/provider/: cache.rs  manager.rs  mod.rs  protocol.rs  registry.rs
src/state/: backend.rs  lock.rs  migration.rs  mod.rs  models.rs  query.rs  schema.rs  sqlite.rs  store.rs
templates/: example-project.yaml
tests/: coerce_test.rs  config_test.rs  dag_test.rs  e2e_test.rs  executor_test.rs  integration_test.rs  state_test.rs  tf_json_test.rs
tests/e2e/: README.md
tests/e2e/01-pure-hcl/: main.tf
tests/e2e/02-pure-tf-json/: main.tf.json
tests/e2e/03-mixed/: providers.tf  resources.tf.json
tests/e2e/04-aws-hcl/: main.tf
tests/e2e/05-aws-tf-json/: main.tf.json
tests/e2e/06-aws-mixed/: providers.tf  resources.tf.json
tests/e2e/07-apply-destroy/: main.tf
tests/fixtures/tf-json/compute-events/: cdk.tf.json
tools/cdktf-fixtures/: .gitignore  README.md  package.json  tsconfig.base.json
tools/cdktf-fixtures/scripts/: collect-fixtures.ts  synth-all.ts
(+6 files in other folders)
