[package]
name = "oxid"
version = "0.1.3"
edition = "2021"
description = "Standalone infrastructure-as-code engine — OSS alternative to Terraform/OpenTofu"
license = "Apache-2.0"
repository = "https://github.com/ops0-ai/oxid"
homepage = "https://github.com/ops0-ai/oxid"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Config parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# HCL parsing
hcl-rs = "0.18"

# Dependency graph
petgraph = "0.6"

# State storage - SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# State storage - PostgreSQL (feature-gated)
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"], optional = true }

# Concurrent data structures
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Terminal output
colored = "2"
indicatif = "0.17"

# gRPC for provider communication
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }

# Unix signal handling
libc = "0.2"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rmp-serde = "1"
rmpv = "1"
futures = "0.3"
flate2 = "1"
tar = "0.4"
zip = "2"

[features]
default = ["sqlite"]
sqlite = []
postgres = ["sqlx"]

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
